tdf#90421 RTF export: ignore hyperlinks without an URL

Commit fe444d1f74abe417962be0bcd3340f40f2446b58 (fdo#62536: sw: fix
AutoCorrect bold/underline on existing AUTOFMT, 2013-06-20) adds an
empty inet format hint on the text node during autocorrection, on export
we can safely ignore that to provide well-formed output.

(cherry picked from commit 7d42346ba77c9c4df241ea40eaf550993ca18783)

Change-Id: Iafae941a13e29dcc7d8b4bade5ce94a486b59638
Reviewed-on: https://gerrit.libreoffice.org/15906
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Tested-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>